# open5gs

configs/open5gs/: smsf.yaml.in
debian/: open5gs-smsf.install
lib/crypt/: milenage.c
lib/dbi/: subscription.c
lib/diameter/sgd/: meson.build  message.c  message.h  ogs-diameter-sgd.h
lib/proto/: types.h
lib/sbi/: context.c  context.h  message.c  message.h  ogs-sbi.h  types.h
src/amf/: amf-sm.c  context.c  context.h  gmm-build.c  gmm-handler.c  gmm-sm.c  namf-handler.c  nas-path.c  ngap-handler.c  npcf-handler.c  nsmsf-build.c  nsmsf-build.h  nsmsf-handler.c  nsmsf-handler.h  nudm-handler.c  sbi-path.c  sbi-path.h
src/ausf/: context.c  nudm-handler.c
src/hss/: hss-context.c  hss-s6a-path.c  hss-s6a-path.h  hss-swx-path.c
src/mme/: emm-sm.c  mme-context.c  mme-context.h  mme-fd-path.c  mme-fd-path.h  mme-path.c  mme-path.h  mme-s11-build.c  mme-s6a-handler.c  mme-s6a-handler.h  mme-sm.c  s1ap-handler.c  s1ap-handler.h  s1ap-path.c  s1ap-sm.c
src/pcf/: context.c  context.h  nudr-handler.c
src/smsf/: app.c  context.c  context.h  event.c  event.h  init.c  meson.build  namf-build.c  namf-build.h  namf-handler.c  namf-handler.h  nnrf-handler.c  nnrf-handler.h  nsmsf-handler.c  nsmsf-handler.h  nudm-build.c  nudm-build.h  nudm-handler.c  nudm-handler.h  sbi-path.c  sbi-path.h  sms.c  sms.h  smsf-sm.c  smsf-sm.h  ue-sm.c
src/udm/: context.c  context.h  nudm-handler.c  nudm-handler.h  nudr-build.c  nudr-build.h  nudr-handler.c  nudr-handler.h  sbi-path.c  sbi-path.h  udm-sm.c  ue-sm.c
src/udr/: context.c  context.h  nudr-handler.c  nudr-handler.h
(+17 files in other folders)
